# nano-jepa

./: .gitignore  append_plot_notebook.py  colab_training.ipynb  edit_plot.py  evaluate_training.ipynb  generate_colab_notebook.py  generate_kaggle_notebook.py  generate_notebook.py  inspect_checkpoint.py  kaggle_training.ipynb  nano-train.csv  pyproject.toml  recover_lr.py  run_inference.py  visualize_features.ipynb
app/: train_nano_jepa.py
app/vjepa/: utils.py
configs/pretrain/: vitt16.yaml
